2004-12-27 Bart Hakvoort  <gparted@users.sf.net>

	* Added cylsize to Device and made Operation contain a Device instead of only the path and lenght.
	  This way i was able to dump Get_Cyl_Size in the Core. Besides that, i used cylsize in WinGparted and made a lot of
	  cosmetic changes. Most of them were pretty useless, but hey, i'm bored ;)

2004-12-25 Bart Hakvoort  <gparted@users.sf.net>

	* src/GParted_Core.cc,
	  src/Win_GParted.cc,
	  include/Utils.h,
	  include/GParted_Core.h: moved inline Get_FS from Utils.h to GParted_Core, saves a few K in exe size ;)

2004-12-23 Bart Hakvoort  <gparted@users.sf.net>

	* src/GParted_Core.cc: removed sorting of detected devices. I figured we didn't need it anymore now 'deep_scan' is removed.

2004-12-22 Bart Hakvoort  <gparted@users.sf.net>

	* configure.in: bumped to 0.0.8

2004-12-20 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_Partition_Copy.cc,
	  src/Win_GParted.cc,
	  src/xfs.cc: xfs copy now uses xfsdump and xfsrestore. icw some hacks in the other 2 files, it's now possible to shrink an xfs partition
	  while doing the copy. Although i'd rather preffered 'real' (in place) resizing i figured it's better then nothing.
	  Also the sourcefilesystem is now checked before the actual copy is performed. If damaged beyond repair, the copy won't start.
	* src/Dialog_Partition_Resize_Move.cc: removed commented code.

2004-12-18 Bart Hakvoort  <gparted@users.sf.net>

	* include/Dialog_Filesystems.h,
	  src/Dialog_Filesystems.cc: Replaced treestore with liststore. I decided i didn't need a treeview after all...
	* src/Dialog_About.cc: Replaced "Gnome Partition Editor based on libparted" with "Gnome Partition Editor"
	* src/xfs.cc: fixed small error with creation of xfs filesystems (adrighem)

2004-12-17 Bart Hakvoort  <gparted@users.sf.net>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: Removed 'deep_scan' flag. From now on all scans are 'deep scans'.
	* include/Win_GParted.h,